--- a/Week 10/Program40_ePet Care/Program40_ePet Care/Program40_ePet Care.vcxproj
+++ b/Week 10/Program40_ePet Care/Program40_ePet Care/Program40_ePet Care.vcxproj
@@ -127,7 +127,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Cat.cpp" />
+    <ClCompile Include="Dog.cpp" />
+    <ClCompile Include="Hamster.cpp" />
+    <ClCompile Include="Pet.cpp" />
     <ClCompile Include="Program40_ePet Care.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Cat.h" />
+    <ClInclude Include="Dog.h" />
+    <ClInclude Include="Hamster.h" />
+    <ClInclude Include="Pet.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
